<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContentCadTarea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".tareas.CadTarea">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/eligeCategoriaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/categoria"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/eligeCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/observacionesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/observaciones">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/observacionesInputEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inicioInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:hint="@string/inicio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inicioInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/horaInicioInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="2"
                android:hint="@string/hora_inicio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/horaInicioInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fimInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:hint="@string/fim">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fimInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/horaFimInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="2"
                android:hint="@string/hora_fim">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/horaFimInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/eligeFrequenciaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/frequencia"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/eligeFrequencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="horizontal"
            android:gravity="bottom">

            <Button
                android:id="@+id/btn_cancelar"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_cancelar"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btn_guardar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_guardar" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
