<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContentRefreshTarea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".tareas.updateDelete">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/eligeCategoriaTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/categoria"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/eligeCategoriaUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/observacionesInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/observaciones">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/observacionesInputEditUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inicioInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:hint="@string/inicio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inicioInputEditUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/horaInicioInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="2"
                android:hint="@string/hora_inicio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/horaInicioInputEditUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fimInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:hint="@string/fim">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fimInputEditUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/horaFimInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="2"
                android:hint="@string/hora_fim">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/horaFimInputEditUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/eligeFrequenciaTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/frequencia"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/eligeFrequenciaUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="horizontal"
            android:gravity="bottom">

            <Button
                android:id="@+id/btn_excluir"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnDelete_Click"
                android:text="@string/btn_excluir"
                android:textColor="#FF1400" />

            <Button
                android:id="@+id/btn_actualizar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnUpdate_Click"
                android:text="@string/btn_actualizar" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
